FullQa New/src/PS Enterprise/objects/Project_Planner_Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>User preferences that determine the look and feel of the project planner.</description>
    <fields>
        <fullName>Display_Decimal_Precision_Cutoff__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Maximum (non-inclusive) number of hours to render fractional precision in Planner.</description>
        <inlineHelpText>The maximum number of hours for which to display decimal places. For example, if set to 100, decimal precision displays for 100 hours or less. The default value is &quot;100&quot;</inlineHelpText>
        <label>Display Decimal Precision Cutoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hide_Inline_Dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether or not to hide the edit mode settings dialog.</inlineHelpText>
        <label>Hide Inline Edit Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inline_Edit_Mode_THHC__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This setting determines how inline editing of assignments affects total assignment hours and end date.</inlineHelpText>
        <label>Hold total assignment hours constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Project_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines if project start and end date indicators display in a project summary bar.  The default value is deselected.</inlineHelpText>
        <label>Show Project Start/End Date Indicators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Shift_Schedule_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, Shift Management assignments display in Planners.</inlineHelpText>
        <label>Show Shift Management Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zoom_Level__c</fullName>
        <defaultValue>&quot;week&quot;</defaultValue>
        <inlineHelpText>The default timeline zoom level. Enter a value of quarter, month, week or day. The default value is &quot;week&quot;.</inlineHelpText>
        <label>Zoom Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Planners Preferences - Project</label>
</CustomObject>